fix(a11y): increase contrast ratio of blockquotes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -75,7 +75,7 @@ body.light {
 
     blockquote {
         background: $teal;
-        color: #eeeeee;
+        color: #ffffff;
     }
 }
 
